# cmdytd

./: README.md  install.sh  requirements.txt  run  set_version  setup.cfg  setup.py
cmdytd/: __init__.py  cmdytd.py
cmdytd/audio/: core.py  handler.py  subparser.py
cmdytd/channel/: handler.py  subparser.py
cmdytd/channel/video/: handler.py  subparser.py
cmdytd/download/: __init__.py  consts.py  core.py
cmdytd/playlist/: __init__.py  handler.py  subparser.py
cmdytd/shared/: __init__.py  logger.py  terminal.py
