[metadata]
name = cmdytd
version = 0.0.1
keywords = command, terminal, console, utilities
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Utilities

[options]
packages = cmdytd 
install_requires =
    rich
    sqlalchemy

[options.entry_points]
console_scripts =
    cmdytd = cmdytd.cmdytd:main
